<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderWithDelivery">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/roboto"
            android:text="@string/order_amount"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/status_background"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/order_status"
            android:textAlignment="textStart"
            android:textColor="#04AED4"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/amount"
            app:layout_constraintTop_toBottomOf="@+id/amount" />

        <TextView
            android:id="@+id/payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/payment_type_background"
            android:fontFamily="@font/roboto"
            android:text="@string/order_payment_method"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="textEnd"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/amount"
            app:layout_constraintTop_toBottomOf="@+id/amount"
            app:drawableStartCompat="@drawable/ic_cash"
            android:drawablePadding="2dp"/>

        <TextView
            android:id="@+id/delivery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            style="@style/TitlesStyle"
            android:text="@string/delivery_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/delivery_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="380dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/delivery_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delivery_title">

            <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                style="@style/TitlesStyle"
                android:text="@string/address_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/address_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_info"
                style="@style/TextStyle"
                app:layout_constraintStart_toStartOf="@+id/address_title"
                app:layout_constraintTop_toBottomOf="@+id/address_title" />

            <ImageView
                android:id="@+id/navigation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/navigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                style="@style/TitlesStyle"
                android:text="@string/phone_number_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_info" />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"
                android:text="@string/phone_number"
                app:layout_constraintStart_toStartOf="@+id/phone_number_title"
                app:layout_constraintTop_toBottomOf="@+id/phone_number_title" />

            <ImageView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="55dp"/>

            <TextView
                android:id="@+id/recipient_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                style="@style/TitlesStyle"
                android:text="@string/recipient_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number" />

            <TextView
                android:id="@+id/recipient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"
                android:text="@string/recipient"
                app:layout_constraintStart_toStartOf="@+id/recipient_title"
                app:layout_constraintTop_toBottomOf="@+id/recipient_title" />

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/comment_title"
                android:textColor="#7F000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recipient" />

            <TextView
                android:id="@+id/comment_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/comment_content"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/comment_title"
                app:layout_constraintTop_toBottomOf="@+id/comment_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/order_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:gravity="start|center_vertical"
            android:text="@string/order_details_title"
            android:textColor="#7F000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/delivery_title"
            app:layout_constraintTop_toBottomOf="@id/delivery_info" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/order_details_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="380dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:background="@drawable/delivery_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_details_title">

            <TextView
                android:id="@+id/date_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/date_number_title"
                android:textColor="#7F000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_number_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/date_number_info"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/date_number_title"
                app:layout_constraintTop_toBottomOf="@+id/date_number_title" />

            <TextView
                android:id="@+id/delivery_spot_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/delivery_spot_title"
                android:textColor="#7F000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/date_number_info"
                app:layout_constraintTop_toBottomOf="@id/date_number_info" />

            <TextView
                android:id="@+id/delivery_spot_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/delivery_spot_info"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/delivery_spot_title"
                app:layout_constraintTop_toBottomOf="@+id/delivery_spot_title" />

            <TextView
                android:id="@+id/box_number_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/box_number_title"
                android:textColor="#7F000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/delivery_spot_info"
                app:layout_constraintTop_toBottomOf="@id/delivery_spot_info" />

            <TextView
                android:id="@+id/box_number_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/box_number_info"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/box_number_title"
                app:layout_constraintTop_toBottomOf="@+id/box_number_title" />

            <TextView
                android:id="@+id/payment_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/payment_type_title"
                android:textColor="#7F000000"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/box_number_info"
                app:layout_constraintTop_toBottomOf="@id/box_number_info" />

            <TextView
                android:id="@+id/payment_type_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/payment_type_info"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/payment_type_title"
                app:layout_constraintTop_toBottomOf="@+id/payment_type_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/order_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto"
            android:gravity="start|center_vertical"
            android:text="@string/order_info_title"
            android:textColor="#7F000000"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/delivery_info"
            app:layout_constraintTop_toBottomOf="@id/order_details_info" />

        <TextView
            android:id="@+id/edit_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="end|center_vertical"
            android:text="@string/edit_order_button"
            android:textColor="#04AED4"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/delivery_info"
            app:layout_constraintTop_toBottomOf="@id/order_details_info" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/items_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/delivery_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_order_button"
            android:layout_margin="10dp">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delivery_done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            style="@style/ButtonStyle"
            android:text="@string/delivery_done_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/items_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>